chore: move uv's index-strategy to pyproject.toml
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,7 @@ jobs:
         enable-cache: true
 
     - name: Prepare env
-      run: uv pip install --python=python --system -r tests/requirements.txt --index-strategy unsafe-best-match
+      run: uv pip install --python=python --system -r tests/requirements.txt
 
     - name: Setup annotations on Linux
       if: runner.os == 'Linux'
