--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ keywords = [
     "C++11",
     "Python bindings",
 ]
-dynamic = ["version"]
+dynamic = ["version", "optional-dependencies"]
 requires-python = ">=3.8"
 
 [project.urls]
@@ -42,9 +42,6 @@ Discussions = "https://github.com/pybind/pybind11/discussions"
 Changelog = "https://pybind11.readthedocs.io/en/latest/changelog.html"
 Chat = "https://gitter.im/pybind/Lobby"
 
-[project.optional-dependencies]
-global = ["pybind11-global"]  # TODO: pin
-
 [project.scripts]
 pybind11-config = "pybind11.__main__:main"
 
@@ -53,6 +50,15 @@ pybind11 = "pybind11.__main__:main"
 
 [project.entry-points.pkg_config]
 pybind11 = "pybind11.share.pkgconfig"
+
+
+[dependency-groups]
+test = [
+  "pytest",
+  "build",
+  "tomlkit",
+]
+dev = [{ include-group = "test" }]
 
 
 [tool.scikit-build]
@@ -101,9 +107,11 @@ version_info = tuple(_to_int(s) for s in __version__.split("."))
 '''
 
 
-# Can't use tool.uv.sources with requirements.txt
 [tool.uv]
+# Can't use tool.uv.sources with requirements.txt
 index-strategy = "unsafe-best-match"
+# This extra confuses uv
+override-dependencies = ["pybind11-global"]
 
 
 [tool.mypy]
