--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -148,13 +148,13 @@ set(PYBIND11_TEST_FILES
     test_exceptions
     test_factory_constructors
     test_gil_scoped
-    test_interpreters.py
     test_iostream
     test_kwargs_and_defaults
     test_local_bindings
     test_methods_and_attributes
     test_modules
     test_multiple_inheritance
+    test_multiple_interpreters.py
     test_native_enum
     test_numpy_array
     test_numpy_dtypes
@@ -565,13 +565,13 @@ add_custom_target(
 
 if(NOT PYBIND11_CUDA_TESTS)
   # This module doesn't get mixed with other test modules because those aren't subinterpreter safe.
-  pybind11_add_module(mod_test_interpreters THIN_LTO mod_test_interpreters.cpp)
-  pybind11_add_module(mod_test_interpreters2 THIN_LTO mod_test_interpreters2.cpp)
-  set_target_properties(mod_test_interpreters PROPERTIES LIBRARY_OUTPUT_DIRECTORY
-                                                         "$<1:${CMAKE_CURRENT_BINARY_DIR}>")
-  set_target_properties(mod_test_interpreters2 PROPERTIES LIBRARY_OUTPUT_DIRECTORY
-                                                          "$<1:${CMAKE_CURRENT_BINARY_DIR}>")
-  add_dependencies(pytest mod_test_interpreters mod_test_interpreters2)
+  pybind11_add_module(mod_per_interpreter_gil THIN_LTO mod_per_interpreter_gil.cpp)
+  pybind11_add_module(mod_shared_interpreter_gil THIN_LTO mod_shared_interpreter_gil.cpp)
+  set_target_properties(mod_per_interpreter_gil PROPERTIES LIBRARY_OUTPUT_DIRECTORY
+                                                           "$<1:${CMAKE_CURRENT_BINARY_DIR}>")
+  set_target_properties(mod_shared_interpreter_gil PROPERTIES LIBRARY_OUTPUT_DIRECTORY
+                                                              "$<1:${CMAKE_CURRENT_BINARY_DIR}>")
+  add_dependencies(pytest mod_per_interpreter_gil mod_shared_interpreter_gil)
 endif()
 
 if(PYBIND11_TEST_OVERRIDE)
