--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -220,25 +220,20 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Prepare venv
-        run: python3.13t -m venv .venv
+      - name: Prepare uv's path
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Install Python deps
-        run: .venv/bin/pip install -r tests/requirements.txt
+      - name: Install ninja
+        run: uv tool install ninja
 
-      - name: Configure C++11
-        run: >
-          cmake -S. -Bbuild
-          -DPYBIND11_WERROR=ON
-          -DDOWNLOAD_CATCH=ON
-          -DDOWNLOAD_EIGEN=ON
-          -DPython_ROOT_DIR=.venv
+      - name: Configure via preset
+        run: cmake --preset venv -DPYBIND11_CREATE_WITH_UV=python3.13t
 
       - name: Build C++11
-        run: cmake --build build -j2
+        run: cmake --build --preset venv
 
       - name: Python tests C++11
-        run: cmake --build build --target pytest -j2
+        run: cmake --build --preset venvtests
 
   deadsnakes:
     strategy:
