--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -233,7 +233,7 @@ jobs:
         run: cmake --build --preset venv
 
       - name: Python tests C++11
-        run: cmake --build --preset venvtests
+        run: cmake --build --preset testsvenv -t pytest
 
   deadsnakes:
     strategy:
@@ -287,33 +287,27 @@ jobs:
       run: |
         sudo make install
         sudo apt-get update
-        sudo apt-get install libc6-dbg  # Needed by Valgrind
+        sudo apt-get install ninja-build libc6-dbg
 
     - name: Prepare env
       run: |
         python -m pip install -r tests/requirements.txt
 
     - name: Configure
-      run: >
-        cmake -S . -B build
-        -DCMAKE_BUILD_TYPE=Debug
-        -DPYBIND11_WERROR=ON
-        -DDOWNLOAD_CATCH=ON
-        -DDOWNLOAD_EIGEN=ON
-        -DCMAKE_CXX_STANDARD=17
+      run: cmake --preset default -DCMAKE_CXX_STANDARD=17
 
     - name: Build
-      run: cmake --build build -j 2
+      run: cmake --build --preset default
 
     - name: Python tests
-      run: cmake --build build --target pytest
+      run: cmake --build --preset default --target pytest
 
     - name: C++ tests
-      run: cmake --build build --target cpptest
+      run: cmake --build --preset default --target cpptest
 
     - name: Run Valgrind on Python tests
       if: matrix.valgrind
-      run: cmake --build build --target memcheck
+      run: cmake --build --preset default --target memcheck
 
 
   # Testing on clang using the excellent silkeh clang docker images
