--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -9,6 +9,7 @@ numpy~=1.21.5; platform_python_implementation=="CPython" and python_version>="3.
 numpy~=1.22.2; platform_python_implementation=="CPython" and python_version=="3.10"
 numpy~=1.26.0; platform_python_implementation=="CPython" and python_version>="3.11" and python_version<"3.13"
 numpy~=2.2.0; platform_python_implementation=="CPython" and python_version=="3.13"
+pybind11-stubgen
 pytest>=6
 pytest-timeout
 scipy~=1.5.4; platform_python_implementation=="CPython" and python_version<"3.10"
