--- a/tests/pyproject.toml
+++ b/tests/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "scikit_build_core.build"
 [project]
 name = "pybind11_tests"
 version = "0.0.1"
-dependencies = ["pytest", "pytest-timeout", "numpy", "scipy"]
+dependencies = ["pytest", "pytest-timeout", "numpy", "scipy", "pybind11-stubgen", "mypy"]
 
 [tool.scikit-build.cmake.define]
 PYBIND11_FINDPYTHON = true
