--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
         enable-cache: true
 
     - name: Prepare env
-      run: uv pip install --python=python -r tests/requirements.txt
+      run: uv pip install --python=python --system -r tests/requirements.txt
 
     - name: Setup annotations on Linux
       if: runner.os == 'Linux'
@@ -352,7 +352,7 @@ jobs:
         enable-cache: true
 
     - name: Prepare env
-      run: uv pip install --python=python3 -r tests/requirements.txt
+      run: uv pip install --python=python3 --system -r tests/requirements.txt
 
     - name: Configure
       shell: bash
@@ -396,7 +396,7 @@ jobs:
         enable-cache: true
 
     - name: Prepare env
-      run: uv pip install --python=python3 -r tests/requirements.txt
+      run: uv pip install --python=python3 --system -r tests/requirements.txt
 
     - name: Configure
       run: cmake -S . -B build -DPYBIND11_CUDA_TESTS=ON -DPYBIND11_WERROR=ON -DDOWNLOAD_CATCH=ON
@@ -530,7 +530,7 @@ jobs:
         enable-cache: true
 
     - name: Prepare env
-      run: uv pip install --python=python3 -r tests/requirements.txt
+      run: uv pip install --python=python3 --system -r tests/requirements.txt
 
     - name: Update CMake
       uses: jwlawson/actions-setup-cmake@v2.0
@@ -1016,7 +1016,7 @@ jobs:
         enable-cache: true
 
     - name: Prepare env
-      run: uv pip install --python=python -r tests/requirements.txt
+      run: uv pip install --python=python --system -r tests/requirements.txt
 
 
     - name: Configure C++11
