--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1002,7 +1002,6 @@ jobs:
           mingw-w64-${{matrix.env}}-make
           mingw-w64-${{matrix.env}}-boost
           mingw-w64-${{matrix.env}}-catch
-          mingw-w64-${{matrix.env}}-uv
 
     - uses: msys2/setup-msys2@v2
       if: matrix.sys == 'mingw64'
@@ -1014,7 +1013,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Prepare env
-      run: uv pip install --python=python --system -r tests/requirements.txt
+      run: python -m pip install -r tests/requirements.txt
 
 
     - name: Configure C++11
