fix: compiler does the right thing here, not sure why
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Configure
       run: cmake --preset tidy
     - name: Build
-      run: cmake --build -preset tidy
+      run: cmake --build --preset tidy
 
     - name: Embedded
       run: cmake --build --preset tidy -t cpptest
