--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -20,3 +20,5 @@ filterwarnings =
     # bogus numpy ABI warning (see numpy/#432)
     ignore:.*numpy.dtype size changed.*:RuntimeWarning
     ignore:.*numpy.ufunc size changed.*:RuntimeWarning
+markers =
+    stubgen: enables typing stub generation on all test modules
