tests: set the default visibility to hidden

--- a/tests/test_visibility/CMakeLists.txt
+++ b/tests/test_visibility/CMakeLists.txt
@@ -1,5 +1,7 @@
 possibly_uninitialized(PYTHON_MODULE_EXTENSION Python_INTERPRETER_ID)
 
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+
 if("${PYTHON_MODULE_EXTENSION}" MATCHES "pypy"
    OR "${Python_INTERPRETER_ID}" STREQUAL "PyPy"
    OR "${PYTHON_MODULE_EXTENSION}" MATCHES "graalpy")
