--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1001,6 +1001,7 @@ jobs:
           mingw-w64-${{matrix.env}}-cmake
           mingw-w64-${{matrix.env}}-make
           mingw-w64-${{matrix.env}}-python-pytest
+          mingw-w64-${{matrix.env}}-mypy
           mingw-w64-${{matrix.env}}-boost
           mingw-w64-${{matrix.env}}-catch
 
@@ -1016,7 +1017,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Prepare env
-      run: python -m pip install -r pybind11-stubgen mypy
+      run: |
+        python -m venv .venv
+        . .venv/bin/activate
+        python -m pip install pybind11-stubgen
 
 
     - name: Configure C++11
