--- a/.github/workflows/tests-cibw.yml
+++ b/.github/workflows/tests-cibw.yml
@@ -1,4 +1,4 @@
-name: WASM
+name: CIBW
 
 on:
   workflow_dispatch:
@@ -15,16 +15,33 @@ concurrency:
 jobs:
   build-wasm-emscripten:
     name: Pyodide wheel
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: true
         fetch-depth: 0
 
-    - uses: pypa/cibuildwheel@v2.23
+    - uses: henryiii/cibuildwheel@72d263930ad04fb48fb9d660c1e38a79c9675bf7
       env:
         PYODIDE_BUILD_EXPORTS: whole_archive
       with:
         package-dir: tests
         only: cp312-pyodide_wasm32
+
+  build-ios:
+    name: iOS wheel
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
+        fetch-depth: 0
+
+    - run: brew upgrade cmake
+
+    - uses: henryiii/cibuildwheel@72d263930ad04fb48fb9d660c1e38a79c9675bf7
+      env:
+        CIBW_PLATFORM: ios
+      with:
+        package-dir: tests
