refactor: rename tests to test_cross_module_rtti
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -651,5 +651,5 @@ if(NOT PYBIND11_CUDA_TESTS)
   add_subdirectory(test_cmake_build)
 
   # Test visibility of common symbols across shared libraries
-  add_subdirectory(test_visibility)
+  add_subdirectory(test_cross_module_rtti)
 endif()
