--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -231,7 +231,7 @@ jobs:
       run: cmake --build . --target test_cmake_build
 
     - name: Visibility test
-      run: cmake --build . --target test_visibility
+      run: cmake --build . --target test_cross_module_rtti
 
 
   manylinux:
@@ -332,7 +332,7 @@ jobs:
       run: cmake --build --preset default --target cpptest
 
     - name: Visibility test
-      run: cmake --build --preset default --target test_visibility
+      run: cmake --build --preset default --target test_cross_module_rtti
 
     - name: Run Valgrind on Python tests
       if: matrix.valgrind
@@ -393,7 +393,7 @@ jobs:
       run: cmake --build build --target test_cmake_build
 
     - name: Visibility test
-      run: cmake --build build --target test_visibility
+      run: cmake --build build --target test_cross_module_rtti
 
   # Testing NVCC; forces sources to behave like .cu files
   cuda:
@@ -514,7 +514,7 @@ jobs:
       run: cmake --build build --target test_cmake_build
 
     - name: Visibility test
-      run: cmake --build build --target test_visibility
+      run: cmake --build build --target test_cross_module_rtti
 
   # Testing on GCC using the GCC docker images (only recent images supported)
   gcc:
@@ -567,7 +567,7 @@ jobs:
       run: cmake --build build --target test_cmake_build
 
     - name: Visibility test
-      run: cmake --build build --target test_visibility
+      run: cmake --build build --target test_cross_module_rtti
 
     - name: Configure - Exercise cmake -DPYBIND11_TEST_OVERRIDE
       if: matrix.gcc == '12'
@@ -654,7 +654,7 @@ jobs:
     - name: Visibility test
       run: |
         set +e; source /opt/intel/oneapi/setvars.sh; set -e
-        cmake --build build-11 --target test_visibility
+        cmake --build build-11 --target test_cross_module_rtti
 
     - name: Configure C++17
       run: |
@@ -691,7 +691,7 @@ jobs:
     - name: Visibility test
       run: |
         set +e; source /opt/intel/oneapi/setvars.sh; set -e
-        cmake --build build-17 --target test_visibility
+        cmake --build build-17 --target test_cross_module_rtti
 
   # Testing on CentOS (manylinux uses a centos base).
   centos:
@@ -755,7 +755,7 @@ jobs:
       run: cmake --build build --target test_cmake_build
 
     - name: Visibility test
-      run: cmake --build build --target test_visibility
+      run: cmake --build build --target test_cross_module_rtti
 
 
   # This tests an "install" with the CMake tools
@@ -987,7 +987,7 @@ jobs:
       run: cmake --build build --target test_cmake_build
 
     - name: Visibility test
-      run: cmake --build build --target test_visibility
+      run: cmake --build build --target test_cross_module_rtti
 
     - name: Configure C++20 - Exercise cmake -DPYBIND11_TEST_OVERRIDE
       run: >
@@ -1063,7 +1063,7 @@ jobs:
       run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build --target test_cmake_build
 
     - name: Visibility test
-      run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build --target test_visibility
+      run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build --target test_cross_module_rtti
 
     - name: Clean directory
       run: git clean -fdx
@@ -1087,7 +1087,7 @@ jobs:
       run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build2 --target test_cmake_build
 
     - name: Visibility test
-      run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build2 --target test_visibility
+      run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build2 --target test_cross_module_rtti
 
     - name: Clean directory
       run: git clean -fdx
@@ -1111,7 +1111,7 @@ jobs:
       run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build3 --target test_cmake_build
 
     - name: Visibility test
-      run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build3 --target test_visibility
+      run: PYTHONHOME=/${{matrix.sys}} PYTHONPATH=/${{matrix.sys}} cmake --build build3 --target test_cross_module_rtti
 
   windows_clang:
     if: github.event.pull_request.draft == false
@@ -1181,7 +1181,7 @@ jobs:
         run: cmake --build . --target test_cmake_build -j 2
 
       - name: Visibility test
-        run: cmake --build . --target test_visibility -j 2
+        run: cmake --build . --target test_cross_module_rtti -j 2
 
       - name: Clean directory
         run: git clean -fdx
@@ -1251,7 +1251,7 @@ jobs:
         run: cmake --build . --target test_cmake_build -j 2
 
       - name: Visibility test
-        run: cmake --build . --target test_visibility -j 2
+        run: cmake --build . --target test_cross_module_rtti -j 2
 
       - name: CMake Configure - Exercise cmake -DPYBIND11_TEST_OVERRIDE
         run: >
